# haskell-bug-macos11-can-not-load-opengl

./: README.md  haskell-bug-macos11-can-not-load-opengl.cabal  stack.yaml
.stack-work/: stack.sqlite3
src/: Main.hs
