name:                haskell-bug-macos11-can-not-load-opengl 
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/myproject#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable             haskell-bug-macos11-can-not-load-opengl 
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2
  cpp-options:         -DTEST
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       raw-strings-qq,
                       -- OpenGL
                       -- GLFW,
                       -- GLFW-b,
                       diagrams
                       -- diagrams-lib,
                       -- diagrams-svg,
                       -- diagrams
